--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">PhoneNew</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="phone_title">PHONE NEW</string>
-    <string name="name">Name</string>
-    <string name="price">Price</string>
-    <string name="description">Description</string>
-    <string name="last_price">Last Price</string>
-    <string name="credit">Credit</string>
+    <string name="name">PHONE NEW</string>
+    <string name="price">AHORA $ 0</string>
+    <string name="description">DESCRIPCIÓN</string>
+    <string name="last_price">ANTES $ 0</string>
+    <string name="credit">TIPO DE PAGO</string>
 </resources>
