--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,14 @@
     <string name="price">AHORA $ 0</string>
     <string name="description">DESCRIPCIÓN</string>
     <string name="last_price">ANTES $ 0</string>
-    <string name="credit">TIPO DE PAGO</string>
+    <string name="credit">TIPO DE PAGO</string>x
+
+    <!-- Descripciones -->
+    <string name="floating_btn">Botón para contactar al área de ventas</string>
+    <string name="credit_description">Tipo de pago aceptado</string>
+    <string name="description_description">Descripción del producto</string>
+    <string name="price_description">Precio del producto</string>
+    <string name="image_description">Imagen del producto</string>
+    <string name="name_description">Nombre y modelo del producto</string>
+    <string name="name_store">Nombre de la tienda</string>
 </resources>
