--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="price_list">$ 0</string>
     <string name="phone_list">Modelo</string>
     <string name="description">DESCRIPCIÓN</string>
+    <string name="description_content">DETALLE</string>
     <string name="last_price">ANTES $ 0</string>
     <string name="credit">TIPO DE PAGO</string>x
 
